--- a/config/database.yml
+++ b/config/database.yml
@@ -77,8 +77,11 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+# production:
+#   <<: *default
+#   database: onfleet_production
+#   username: onfleet
+#   password: <%= ENV["ONFLEET_DATABASE_PASSWORD"] %>
+
 production:
-  <<: *default
-  database: onfleet_production
-  username: onfleet
-  password: <%= ENV["ONFLEET_DATABASE_PASSWORD"] %>
+  url: <%= ENV["DATABASE_URL"] %>
